# Cars_datasets_predict-_prices

./: pyproject.toml
data/processed/: features.parquet
notebooks/: ML_Metrics_Teaching_Notebook.ipynb  Shipping_Crisis_Template.ipynb  cars_dis.ipynb  classification_pipelines_example.ipynb  heart_dis.ipynb
reports/: model_card.md
src/ml_baseline/: cli.py  config.py  io.py  matrics.py  sample_data.py  splits.py  train.py
