[project]
name = "week3-ml-baseline-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "typer>=0.21.0",
]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_baseline"]
